# chatgpt2claude

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chatgpt2claude/: __init__.py  chunker.py  cli.py  config.py  fetcher.py  importer.py  md_parser.py  models.py  parser.py  server.py  storage.py  vectorstore.py
tests/fixtures/: sample_conversations.json
